[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/TestTarget01.gd" type="Script" id=1]

[sub_resource type="SphereMesh" id=1]
radial_segments = 8
rings = 6

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CubeMesh" id=4]
material = SubResource( 3 )

[sub_resource type="SphereShape" id=5]

[sub_resource type="CubeMesh" id=6]

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 1, 0, 1, 1 )

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.588235, 0, 0.588235, 1 )

[sub_resource type="CubeMesh" id=10]
material = SubResource( 9 )

[sub_resource type="SphereShape" id=8]

[node name="Target" type="StaticBody"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 0.424264, -0.424264, 0, 0.346924, 0.346924, 0.34538, -0.244221, -0.244221, 0.490625, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 5 )

[node name="Turret" type="Position3D" parent="."]

[node name="MeshInstance1" type="MeshInstance" parent="Turret"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.4, 0, 0, -1.5 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="MeshInstance2" type="MeshInstance" parent="Turret"]
transform = Transform( 0.03, 0, 0, 0, 0.03, 0, 0, 0, 0.15, 0, 0.1, -1.8 )
mesh = SubResource( 10 )
material/0 = null

[node name="SpawnBolt" type="Position3D" parent="Turret"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.64465 )

[node name="Visibility" type="Area" parent="."]
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="Visibility"]
shape = SubResource( 8 )

[node name="TurretCoolDown" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="body_entered" from="Visibility" to="." method="_on_Visibility_body_entered"]
[connection signal="body_exited" from="Visibility" to="." method="_on_Visibility_body_exited"]
[connection signal="timeout" from="TurretCoolDown" to="." method="_on_TurretCoolDown_timeout"]
